fix(web): center align text in loadavg

--- a/apps/fed-web/src/views/node/initializers/loadavg/loadavg.css
+++ b/apps/fed-web/src/views/node/initializers/loadavg/loadavg.css
@@ -6,4 +6,5 @@
 
 .loadavg-bottom {
 	gap: 4em;
+	justify-content: center;
 }
